# vlc-discord-rpc

./: Cargo.toml  LICENSE  README.md
src/: build.rs  main.rs  update.rs
src/config/: example.env
